# Progetto_sistemi2

./: .gitignore  README.md  app.py  data.py  pyproject.toml
Codice/: app.py  data.py
